fix en overflow

--- a/public_html/static/css/style.css
+++ b/public_html/static/css/style.css
@@ -1,3 +1,6 @@
+html{
+	overflow-x: hidden;
+}
 body{
 	background-color: #eee;
 	background-image: url('../images/homepage-v3/pattern-body.png');
@@ -1301,6 +1304,10 @@ a.sp-video:after{content:'\25B6';position:absolute;width:45px;padding-left:5px;h
 	#sHeader .langlist{
 		position: absolute;
 		top: 0;
+		right: 0;
+	}
+	.rtl #sHeader .langlist{
+		right: inherit;
 		left: 0;
 	}
 	.shahidImani{
